# lowwi

./: .gitignore  404.html  CMakeLists.txt  README.md  colcon.pkg  index.html  mkdocs.yml  package.xml  pixi.toml
.github/workflows/: auto_build_linux.yml  auto_build_windows.yml  cpp-formatter.yml  mkdocs.yml  ros2_build_ros2_debian_package.yml  ros2_jazzy_code_compiles.yml  ros2_jazzy_code_compiles_windows.yml  ros2_jazzy_conda_package_linux.yml  ros2_jazzy_conda_package_win.yml  security_scan.yml
about/implementation/: index.html
about/implementation_ros/: index.html
bindings/ros2/: audio_node.cpp  lowwi_node.cpp  set_ld_path.sh
bindings/ros2/msg/: WakeWord.msg
bindings/ros2/srv/: GetAudio.srv
contributing/license/: index.html
contributing/rules/: index.html
docs/: index.md
docs/about/: implementation.md  implementation_ros.md
docs/usage/: lowwi_demo.md  lowwi_demo_mic.md  overview.md
docs/usage/build_environment/: ros2_pixi_build_linux_windows.md  usage_with_linux.md  usage_with_mac.md  usage_with_native_linux.md  usage_with_windows.md
example/LOWWI_demo_fragment/: demo.cpp
example/LOWWI_demo_mic/: demo_mic.cpp
example/LOWWI_demo_mic/audio_async/: audio_async.cpp
example/LOWWI_demo_ros2/: launch_demo_ros2.py  lowwi_ros2_demo.cpp  params.yaml
rattler/: activate.bat  bld_ament_cmake.bat  bld_colcon_merge.bat  build_ament_cmake.sh  recipe.yaml
search/: search_index.json
src/: lowwi.cpp  lowwi.hpp  lowwi_embedding.cpp  lowwi_embedding.hpp  lowwi_melspectrogram.cpp  lowwi_melspectrogram.hpp  lowwi_visibility_export.h  lowwi_wakeword.cpp  lowwi_wakeword.hpp
usage/build_environment/ros2_pixi_build_linux_windows/: index.html
usage/build_environment/usage_with_linux/: index.html
usage/build_environment/usage_with_mac/: index.html
usage/build_environment/usage_with_native_linux/: index.html
usage/build_environment/usage_with_windows/: index.html
usage/lowwi_demo/: index.html
usage/lowwi_demo_mic/: index.html
usage/overview/: index.html
