<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lowwi</name>
  <version>3.11.5</version>
  <description>
    Wakeword detector based on OpenWakeWord-cpp but faster, cleaner, and more lightweight.

    - Plain C/C++ implementation with minimal dependencies (ONNXRuntime)
    - Runs on ARM as well (Tested on RPI 3,4 and 5)
    - Written with performance in mind, less than 3% CPU utilization on x86/64 CPUs
  </description>

  <maintainer email="hogeweyv@gmail.com">Hoog-v</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>

  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <build_depend>rosidl_default_generators</build_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
   
  </export>

</package>
